--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Click Kokomi"
-    />
+    <meta name="description" content="Click Kokomi" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/kokomi_without_animation.webp" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,8 +26,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>MORE KOKOMI</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,5 +41,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+    <script>
+        var nods = document.getElementsByClassName('kokomi');
+        for (var i = 0; i < nods.length; i++) {
+            nods[i].attributes['src'].value += "?a=" + Math.random();
+        }
+    </script>
+</body>
+
 </html>
